plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/jvmJs/jvmJs.kt
expect class <!LINE_MARKER("descr='Has actuals in [jvm, js] module'")!>JvmJs<!> : Number
actual typealias <!LINE_MARKER("descr='Has expects in common module'")!>Common<!> = JvmJs
